# clipstream

./: .gitignore  .gitmessage.txt  README.md  roadmap.md  setup.sh
api/: README.md
api/clipstream-api/: Cargo.toml  Dockerfile  clipsstream.sql  compose.yml
api/clipstream-api/src/: admin.rs  auth.rs  files.rs  invites.rs  main.rs  processing.rs  search.rs  streams.rs  videos.rs
bucket/: README.md
web/: README.md
web/clipstream/: README.md  package-lock.json  package.json
web/clipstream/src/app/: globals.css  layout.tsx  page.tsx
web/clipstream/src/app/components/: AuthButton.tsx  Navbar.tsx
web/clipstream/src/app/dashboard/: logo.tsx  page.tsx
web/clipstream/src/app/providers/: NextAuthProvider.tsx
web/clipstream/src/components/blocks/: hero-section-1.tsx
web/clipstream/src/components/ui/: resizable-navbar.tsx
