[package]
name = "clipstream-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"